<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="335dp"
        android:layout_height="80dp"
        android:fontFamily="casual"
        android:text="@string/GradeFinder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/button3"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button"
        android:onClick="go_first"
        android:text="@string/first_type"
        android:textColorHighlight="@color/button"
        android:textColorLink="@color/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_second"
        android:text="@string/second_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_third"
        android:text="@string/third_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_fourth"
        android:text="@string/fourth_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_fifth"
        android:text="@string/fifth_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_sixth"
        android:text="@string/sixth_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button"
        android:onClick="go_seventh"
        android:text="@string/seventh_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="396dp"
        android:layout_height="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/choose_type"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>